feat: timer was added

--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
         	<span class="moves">3</span> Moves
 
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
+                <i class="fa fa-repeat"></i>
+            </div>
+            
+            <div class="timer">
+                <span >00:00</span>
         	</div>
+
         </section>
 
         <ul class="deck">
