feat: restartGame function and success dialogbox added
a restartGame function was added - the function reinitialize the game
dialogbox is now appearing after finishing the game

--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
             <div class="restart">
                 <i class="fa fa-repeat"></i>
             </div>
-            
+
             <div class="timer">
                 <span >00:00</span>
         	</div>
-
+            <dialog open class="finish-msg">
+                <h2>You made it your score is:<br>
+                    <span class="finish_stars">3</span> stars in
+                    <span class="finish_time">00:00</span>
+                <br>Congratulation!</h2>
+            </dialog>
         </section>
 
         <ul class="deck">
