docs: update and bug fix after code review
timer now start after clicking the first card
timer set back to zero after restarting
a "play again" button was added to the winning massage
function name change updateStatus -> updateStars
bug fix: self matched card bug is now fixed

--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
                 <span >00:00</span>
         	</div>
             <dialog open class="finish-msg">
-                <h2>You made it your score is:<br>
+                <h2>Congratulation!<br>
+                    You made it your score is:<br>
                     <span class="finish_stars">3</span> stars in
-                    <span class="finish_time">00:00</span>
-                <br>Congratulation!</h2>
+                    <span class="finish_time">00:00</span><br>
+                <button class="button">Play Again?</button>
+            </h2>
             </dialog>
         </section>
 
